Added GitPython module to allow for easy reproducibility of directory structure (should work if you start anywhere within the repo on your computer), added file "tree" into notebook for understanding, and reran all cells in the notebook.

--- a/code/scratchwork.ipynb
+++ b/code/scratchwork.ipynb
@@ -5,12 +5,12 @@
    "id": "c62e3a25-de7d-47c6-a7cc-cdd623a94b86",
    "metadata": {},
    "source": [
-    "# Scratch workspace"
+    "# Combined "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "exterior-design",
    "metadata": {
     "tags": []
@@ -29,16 +29,104 @@
     "import geopandas as gpd # manipulating geospatial dataframes\n",
     "import pandas as pd # manipulating typical dataframes\n",
     "\n",
-    "import re # regular expressions for text processing\n",
     "from pathlib import Path # handling filepaths in python\n",
+    "from git import Repo # interface to work w/ git repos\n",
     "\n",
     "pd.set_option('display.max_colwidth', None) # display full entries in each cell\n",
     "pd.options.display.max_columns = 999 # display all cols"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44633093-c40e-402d-87a2-e3a28ee70460",
+   "metadata": {},
+   "source": [
+    "Notably, we chose not to include our data in the GitHub repository. As such, we have instead included it in our Google Drive, with structure described below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98c79be1-7070-4959-8074-3f34ac69a7ca",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "PS F:\\Codebase\\GitHub\\NRT-data-challenge-II_July-2021> tree /f\n",
+    "Folder PATH listing for volume HDD II\n",
+    "Volume serial number is [REDACTED]\n",
+    "F:.\n",
+    "│   .gitattributes\n",
+    "│   .gitignore\n",
+    "│   README.md\n",
+    "│\n",
+    "├───code\n",
+    "│   │   scratchwork.ipynb\n",
+    "│   │   spatial.yml\n",
+    "│   │\n",
+    "│   └───.ipynb_checkpoints\n",
+    "│           scratchwork-checkpoint.ipynb\n",
+    "│\n",
+    "└───data\n",
+    "    ├───american community survey\n",
+    "    │   │   ACSDP5Y2019.DP05_2021-07-14T195323.zip\n",
+    "    │   │\n",
+    "    │   └───ACSDP5Y2019.DP05_2021-07-14T195323\n",
+    "    │           ACSDP5Y2019.DP05_data_with_overlays_2021-07-14T195315.csv\n",
+    "    │           ACSDP5Y2019.DP05_metadata_2021-07-14T195315.csv\n",
+    "    │           ACSDP5Y2019.DP05_table_title_2021-07-14T195315.txt\n",
+    "    │\n",
+    "    ├───asthma hospitalizations\n",
+    "    │   │   MiTracking-Export-154404.zip\n",
+    "    │   │   Oregon_AsthmaHospitalizations_CountyLevel.csv\n",
+    "    │   │\n",
+    "    │   └───MiTracking-Export-154404\n",
+    "    │           data_154404.csv\n",
+    "    │           Disclaimer.htm\n",
+    "    │           footnotes_164.htm\n",
+    "    │           Metadata Asthma Final.pdf\n",
+    "    │           notes_164.htm\n",
+    "    │\n",
+    "    ├───census TIGER shapefiles\n",
+    "    │   │   TGRSHP2020_TechDoc.pdf\n",
+    "    │   │   tl_2020_26_cousub_michigan.zip\n",
+    "    │   │   tl_2020_41_cousub_oregon.zip\n",
+    "    │   │   tl_2020_51_cousub_virginia.zip\n",
+    "    │   │\n",
+    "    │   ├───tl_2020_26_cousub_michigan\n",
+    "    │   │       tl_2020_26_cousub.cpg\n",
+    "    │   │       tl_2020_26_cousub.dbf\n",
+    "    │   │       tl_2020_26_cousub.prj\n",
+    "    │   │       tl_2020_26_cousub.shp\n",
+    "    │   │       tl_2020_26_cousub.shp.ea.iso.xml\n",
+    "    │   │       tl_2020_26_cousub.shp.iso.xml\n",
+    "    │   │       tl_2020_26_cousub.shx\n",
+    "    │   │\n",
+    "    │   ├───tl_2020_41_cousub_oregon\n",
+    "    │   │       tl_2020_41_cousub.cpg\n",
+    "    │   │       tl_2020_41_cousub.dbf\n",
+    "    │   │       tl_2020_41_cousub.prj\n",
+    "    │   │       tl_2020_41_cousub.shp\n",
+    "    │   │       tl_2020_41_cousub.shp.ea.iso.xml\n",
+    "    │   │       tl_2020_41_cousub.shp.iso.xml\n",
+    "    │   │       tl_2020_41_cousub.shx\n",
+    "    │   │\n",
+    "    │   └───tl_2020_51_cousub_virginia\n",
+    "    │           tl_2020_51_cousub.cpg\n",
+    "    │           tl_2020_51_cousub.dbf\n",
+    "    │           tl_2020_51_cousub.prj\n",
+    "    │           tl_2020_51_cousub.shp\n",
+    "    │           tl_2020_51_cousub.shp.ea.iso.xml\n",
+    "    │           tl_2020_51_cousub.shp.iso.xml\n",
+    "    │           tl_2020_51_cousub.shx\n",
+    "    │\n",
+    "    └───heart attack hospitalizations\n",
+    "            MiTracking-Export-154744.zip\n",
+    "            Oregon_HeartAttackHospitalizations_CountyLevel.csv\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "golden-module",
    "metadata": {},
    "outputs": [
@@ -52,8 +140,11 @@
     }
    ],
    "source": [
-    "# define paths for relevant data directories\n",
-    "datapath = Path('../data/')\n",
+    "# define paths for relevant directories\n",
+    "repo = Repo('.', search_parent_directories=True) # start with current directory and create a git.Repo object\n",
+    "repopath = Path(repo.git.rev_parse('--show-toplevel')) # use git commands to return path for root of git repo\n",
+    "\n",
+    "datapath  = repopath / 'data'\n",
     "\n",
     "shapefiles_path = datapath / 'census TIGER shapefiles'\n",
     "acs_path = datapath / 'american community survey'\n",
@@ -101,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "db16647f-3e4e-436f-b436-3d0e5dd4340e",
    "metadata": {},
    "outputs": [],
@@ -114,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "abab2d48-b878-40d9-9dcc-2192b825de12",
    "metadata": {},
    "outputs": [
@@ -166,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "5ec628e4-78cd-4318-b2f4-99128293f82d",
    "metadata": {
     "tags": []
@@ -1980,7 +2071,7 @@
        "0  Percent Margin of Error!!CITIZEN, VOTING AGE POPULATION!!Citizen, 18 and over population!!Female  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "0a9b15d3-2cc0-4f06-805b-404eb463afb2",
    "metadata": {
     "tags": []
@@ -2021,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "d546adcc-88ca-4483-8020-b5da6f3b874a",
    "metadata": {
     "tags": []
@@ -2034,7 +2125,7 @@
     "# create row-iterator for our dataframe\n",
     "row_indices = range(segr_df.shape[0]) # range of 0 to nrows\n",
     "\n",
-    "# create new df column 'county' to hold county name split via exp (more info on split(): https://docs.python.org/3.8/library/re.html#re.split)\n",
+    "# create new df column 'GEOID' to hold reformatted 'GEO_ID' to match our original shapefiles 'GEOID' variable format\n",
     "segr_df['GEOID'] = [segr_df['GEO_ID'].iloc[i][9:] for i in row_indices] # only keep cell entry before exp"
    ]
   },
@@ -2048,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "aa99d0b1-817e-4e47-b095-eed0b86bf8f4",
    "metadata": {},
    "outputs": [],
@@ -2075,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 9,
    "id": "a896c1fa-0393-46af-ad3d-16f88dd18b9c",
    "metadata": {},
    "outputs": [],
@@ -2088,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 10,
    "id": "ee5f070e-bb25-4a6c-b6df-8a3921bae2e2",
    "metadata": {
     "tags": []
@@ -2117,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "id": "c39d128e-2443-44a4-bdc3-4d2b53ea1147",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "id": "209a679e-b71e-407f-96a2-a80d4d0cb80f",
    "metadata": {},
    "outputs": [
